@@ -1,4 +1,6 @@
 2009-08-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ src/connection_base.cxx:
+ - libpq versions without PQcancel don't have PGcancel either.
  test/unit/test_cancel_query.cxx:
  - Added test for cancel_query, thanks Don Madden.
 2009-08-20  Jeroen T. Vermeulen <jtv@xs4all.nl>
